skip AD accounts list if only one account was found

--- a/src/front/blocks/filters/filters-computers.pug
+++ b/src/front/blocks/filters/filters-computers.pug
@@ -4,8 +4,8 @@ include ../checkbox/checkbox.pug
 form(class='filters' action='computers' method='get')
 	div(class='filters__wrapper' id='mode-selector')
 		h3(class='filters__label') Режим поиска
-		+radio([{id: 'mode-name', name: 'mode', value: 'computer-by-name', label: 'Поиск по имени (cn)', checked: true},
-				{id: 'mode-owner', name: 'mode', value: 'computer-by-owner', label: 'Поиск по владельцу (description)', checked: false}])
+		+radio([{id: 'mode-name', name: 'mode', value: 'computer-by-name', label: 'Поиск по имени (cn)', checked: false},
+				{id: 'mode-owner', name: 'mode', value: 'computer-by-owner', label: 'Поиск по владельцу (description)', checked: true}])
 	div(class='filters__wrapper')
 		label(class='filters__label' for='search-value' id='search-value-header')
 		input(type='text' name='query' placeholder='' id='search-value')
