--- a/src/front/blocks/filters/filters-phones.pug
+++ b/src/front/blocks/filters/filters-phones.pug
@@ -8,9 +8,9 @@ div(class='filters')
 	div(class='filters__wrapper')
 		label(class='filters__label' for='search-param-select') Параметр
 		select(id='search-param-select')
-			option(value='Отдел', selected=true) Отдел
+			option(value='Отдел') Отдел
 			option(value='Описание') Описание
-			option(value='ФИО') ФИО
+			option(value='ФИО', selected=true) ФИО
 			option(value='Стационарный') Стационарный
 			option(value='Короткий стационарный') Короткий стационарный
 			option(value='Факс') Факс
