--- a/src/front/blocks/filters/filters-printers.pug
+++ b/src/front/blocks/filters/filters-printers.pug
@@ -2,9 +2,7 @@ div(class='filters')
 	div(class='filters__wrapper')
 		label(class='filters__label' for='plant-select') Завод
 		select(id='plant-select')
-			option(value='VSE') Всеволожск
-			option(value='KOM', selected=true) Коммунар
-			option(value='MOS') Москва
+			// script will put the options here
 	div(class='filters__wrapper')
 		label(class='filters__label' for='search-param-select') Параметр
 		select(id='search-param-select')
