--- a/src/front/blocks/filters/filters.styl
+++ b/src/front/blocks/filters/filters.styl
@@ -69,5 +69,8 @@
 			margin 0 0 20px 0
 	
 	.page--accounts .filters__wrapper,
-	.page--computers .filters__wrapper
-			width 50%
+	.page--computers .filters .filters__wrapper
+		width 50%
+
+	.page--phones .filters .filters__wrapper
+		width 100%
