--- a/src/front/blocks/item/item.styl
+++ b/src/front/blocks/item/item.styl
@@ -1,4 +1,5 @@
 .item
+	position relative
 	padding 5px
 	background-color white
 	font-size 0.8rem
@@ -14,7 +15,7 @@
 		&--center
 			text-align center
 
-		&:last-child
+		&:last-of-type
 			margin 0
 
 	&__btns-wrapper
@@ -32,6 +33,19 @@
 	&__qrcode
 		display block
 		margin 0 auto
+	
+	&__qrlink
+		position absolute
+		bottom -15px
+		right -5px
+
+		& svg
+			width 30px
+			width 30px
+
+		&:hover
+			transform rotate(8deg)
+			transition 0.5s
 
 .page--users .item__head
 	margin 0
@@ -43,3 +57,11 @@
 		
 		&__search-btn
 			margin-bottom 0
+
+		&__qrlink
+			bottom -8px
+			right -8px
+
+			& svg
+				width 50px
+				width 50px
