add phones export to Excel

--- a/src/back/views/page-error.pug
+++ b/src/back/views/page-error.pug
@@ -13,5 +13,5 @@ html(lang='ru')
 				div
 					h2(class='section__head') Упс, что-то пошло не так... &#128557
 					div(class='section__hints')
-						include ../blocks/link/link-img.pug
+						include ../blocks/hint/hint-back-btns.pug
 					p!=`<b>Error message:</b> ${error}`
