--- a/src/front/blocks/filters/filters-phones.pug
+++ b/src/front/blocks/filters/filters-phones.pug
@@ -1,6 +1,15 @@
+- var notesUrl = 'http://collaboration.smurfitkappa.com/sites/RU-SK-Russia/_layouts/15/WopiFrame.aspx?sourcedoc=/sites/RU-SK-Russia/Shared%20Documents/IT%20department/%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D0%B8%20%D0%B4%D0%BB%D1%8F%20%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8F/%D0%A2%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D0%BD%D1%8B%D0%B9%20%D1%81%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA/%D0%9F%D0%B0%D0%BC%D1%8F%D1%82%D0%BA%D0%B0%20%D0%BF%D0%BE%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D0%BD%D0%BE%D0%BC%D1%83%20%D1%81%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA%D1%83.docx';
+
 div(class='filters')
 	div(class='filters__wrapper')
-			label(class='filters__label' for='search-value-input') Найти контакт
+			label(class='filters__label' for='search-value-input') Поиск в телефонном справочнике
 			input(type='text' id='search-value-input' placeholder='Фамилия, отдел, должность, телефон...')
-	div(class='filters__wrapper filters__wrapper--center')
+	div(class='filters__wrapper')
 		button(class='btn btn--search' id='search-btn' title='Искать')
+		div(class='filters__links')
+			a(href=`${notesUrl}` target="blank" class='link link--img' title='Открыть памятку')
+				svg(width='18' height='18')
+					use(xlink:href='#info')
+			a(href='/phones/excel' class='link link--img link--excel' id='btn-export' target="blank" title='Экспорт в Excel: весь справочник')
+				svg(width='18' height='18')
+					use(xlink:href='#excel')
