--- a/src/front/blocks/filters/filters-printers.pug
+++ b/src/front/blocks/filters/filters-printers.pug
@@ -15,5 +15,5 @@ div(class='filters')
 			input(list='search-value-datalist' id='search-value-input' placeholder='Впиши значение...')
 			datalist(id='search-value-datalist')
 				// script will put the options here
-	div(class='filters__wrapper filters__wrapper--center')
+	div(class='filters__wrapper')
 		button(class='btn btn--search' id='search-btn' title='Искать')
