--- a/src/front/blocks/header/header.styl
+++ b/src/front/blocks/header/header.styl
@@ -11,6 +11,12 @@
 	&__link
 		display flex
 
+		&:hover
+			opacity 0.8
+
+		&:active
+			opacity 0.6
+
 	&__logo
 		align-self center
 		margin 0 15px 0 0
