--- a/src/front/blocks/filters/filters.styl
+++ b/src/front/blocks/filters/filters.styl
@@ -10,7 +10,17 @@
 		padding 0
 
 		&:last-child
+			width 100%
 			margin 0
+
+	&__links
+		display flex
+		justify-content flex-end
+		width 100%
+
+		& .link
+			width 14px
+			height 14px
 
 	&__label
 		margin 0 0 10px 0
@@ -56,10 +66,6 @@
 		&__wrapper
 			margin 0 0 30px 0
 			width 33%
-		
-			&--center
-				margin 5px 0 0 0
-				width 100%
 
 		& select,
 		& input[id="search-value-input"]
