--- a/src/front/blocks/hint/hint.pug
+++ b/src/front/blocks/hint/hint.pug
@@ -1,5 +1,5 @@
 p(class='hint hint--show' id='hint') 
 	| Выставь фильтры и нажми кнопку 
-	svg(width='14' height='14' class='hint__img')
+	svg(width='14' height='14' fill='green')
 		use(xlink:href='#search')
 	|  или Enter
