--- a/src/front/blocks/item/item.styl
+++ b/src/front/blocks/item/item.styl
@@ -12,27 +12,17 @@
 	&__property
 		margin 0 0 10px 0
 
-		&--center
-			text-align center
-
 		&:last-of-type
 			margin 0
 
 	&__btns-wrapper
 		display flex
 		flex-wrap wrap
-		margin 5px 0
+		margin 15px 0 5px 0
 
 	&__search-btn
 		display block
-		margin 0 10px 10px 0
-
-		&:last-child
-			margin 0
-
-	&__qrcode
-		display block
-		margin 0 auto
+		margin 0 10px 0 0
 	
 	&__qrlink
 		position absolute
