fix excel export link event listener

--- a/src/front/blocks/hint/hint-instruction.pug
+++ b/src/front/blocks/hint/hint-instruction.pug
@@ -2,7 +2,7 @@
 
 p(class='hint' id='hint-instruction')
 	| Как подключить принтер?
-	a(href=`${instructionUrl}` class='link link--img' target='blank' title='Открыть инструкцию')
+	a(href=`${instructionUrl}` class='link link--img' target='_blank' title='Открыть инструкцию')
 		svg(width='25' height='25')
 			use(xlink:href='#printer')
 
