--- a/src/front/blocks/filters/filters-phones.pug
+++ b/src/front/blocks/filters/filters-phones.pug
@@ -7,9 +7,9 @@ div(class='filters')
 	div(class='filters__wrapper')
 		button(class='btn btn--search' id='search-btn' title='Искать')
 		div(class='filters__links')
-			a(href=`${notesUrl}` target="blank" class='link link--img' title='Открыть памятку')
+			a(href=`${notesUrl}` target="_blank" class='link link--img' title='Открыть памятку')
 				svg(width='18' height='18')
 					use(xlink:href='#info')
-			a(href='/phones/excel' class='link link--img link--excel' id='btn-export' target="blank" title='Экспорт в Excel: весь справочник')
+			a(href='/phones/excel' class='link link--img link--excel' id='btn-export' target="_blank" title='Экспорт в Excel: весь справочник')
 				svg(width='18' height='18')
 					use(xlink:href='#excel')
