--- a/src/front/blocks/nav/nav.styl
+++ b/src/front/blocks/nav/nav.styl
@@ -37,6 +37,8 @@
 			margin 0
 
 .page--accounts .nav__link--accounts,
+.page--expired .nav__link--expired,
+.page--locked .nav__link--locked,
 .page--phones .nav__link--phones,
 .page--computers .nav__link--computers,
 .page--printers .nav__link--printers
