--- a/src/front/blocks/filters/filters.styl
+++ b/src/front/blocks/filters/filters.styl
@@ -6,12 +6,15 @@
 		display flex
 		flex-direction column
 		align-items center
-		margin 0 0 20px 0
+		margin 10px 0 20px 0
 		padding 0
 
 		&:last-child
 			width 100%
-			margin 0
+			margin 0 0 10px 0
+
+		& p
+			margin 0 0 10px 0
 
 	&__links
 		display flex
@@ -23,11 +26,10 @@
 			height 14px
 
 	&__label
-		margin 0 0 10px 0
+		margin 0 0 15px 0
 		font inherit
 		font-weight bold
 		text-transform uppercase
-		cursor pointer
 
 	&:last-child
 		margin 0
@@ -64,7 +66,7 @@
 		line-height 1rem
 
 		&__wrapper
-			margin 0 0 30px 0
+			margin 10px 0 30px 0
 			width 33%
 
 		& select,
@@ -75,8 +77,13 @@
 			margin 0 0 20px 0
 	
 	.page--accounts .filters__wrapper,
+	.page--expired .filters__wrapper,
 	.page--computers .filters .filters__wrapper
 		width 50%
 
+	.page--accounts .filters__wrapper:last-child,
+	.page--expired .filters__wrapper:last-child,
+	.page--computers .filters__wrapper:last-child,
+	.page--locked .filters__wrapper,
 	.page--phones .filters .filters__wrapper
 		width 100%
