--- a/src/back/views/page-computers.pug
+++ b/src/back/views/page-computers.pug
@@ -14,6 +14,10 @@ html(lang='ru')
 					h2(class='section__head')=`Результаты поиска - [${computers.length}]`
 					div(class='section__hints')
 						include ../blocks/hint/hint-back-btns.pug
+						p(class='hint hint--show')
+							a(href=`/computers/excel?${rusonly ? 'rusonly=on&' : ''}mode=computers-by-name&query=${query}` class='link link--img link--excel' id='btn-export' target="_blank" title='Экспорт в Excel')
+								svg(width='18' height='18')
+									use(xlink:href='#excel')
 					ul(class='section__content results results--show')
 						each computer, index in computers
 							li(class='results__item item')
