Fix links, favicon, cmd files for run server

--- a/src/front/blocks/head/head.pug
+++ b/src/front/blocks/head/head.pug
@@ -4,5 +4,6 @@ mixin head(title)
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(charset='utf-8')
-		link(rel='icon', href='img/logo.png', type='image/png')
+		link(rel='icon', type='image/x-icon', href='img/favicon.ico')
+		link(rel='icon', type='image/png', href='img/favicon.png')
 		link(rel='stylesheet', href='css/style.min.css')
