--- a/src/front/blocks/nav/nav.pug
+++ b/src/front/blocks/nav/nav.pug
@@ -3,7 +3,7 @@
 mixin nav(pageName)
 	nav(class='nav')
 		div(class='nav__wrapper')
-			a(class='nav__link link nav__link--services' href="index.html") Сервисы
+			a(class='nav__link link nav__link--services' href="/") Сервисы
 			each page, key in pages
 				unless (key !== pageName) 
 					a(class=`nav__link link nav__link--${key}` href=page.href)=page.description
