--- a/src/front/blocks/header/header.pug
+++ b/src/front/blocks/header/header.pug
@@ -1,6 +1,6 @@
 mixin header(title)
 	header(class='header')
 		div(class='header__wrapper')
-			a(class='header__link', href='index.html', title='Главная')
-				img(class='header__logo' src='img/logo.png', width='40', height='30')
+			a(class='header__link', href='/', title='Главная')
+				img(class='header__logo' src='img/favicon.png', width='40', height='30')
 			h1(class='header__head')=title
