Add email property in the AD user view

--- a/src/back/views/page-user.pug
+++ b/src/back/views/page-user.pug
@@ -33,6 +33,7 @@ html(lang='ru')
 							p(class='item__property')!=`<b>Департамент:</b> ${(user.department) ? user.department : ''}`
 							p(class='item__property')!=`<b>Должность:</b> ${(user.title) ? user.title : ''}`
 							p(class='item__property')!=`<b>Руководитель:</b> ${(user.manager) ? utilsFunc.managerParser(user.manager) : ''}`
+							p(class='item__property')!=`<b>Email:</b> ${(user.mail) ? `<a href="mailto:${user.mail}">${user.mail}</a>` : ''}`
 							div(class='item__btns-wrapper')
 								a(class='item__search-btn btn' href=`/ad-groups?query=${user.sAMAccountName}`) Список AD групп
 								a(class='item__search-btn btn' href=`/computers?${rusonly ? 'rusonly=on&' : ''}mode=computers-by-owner&query=${initials.name.slice(0, 1)}${initials.surname}`) Компьютер пользователя
